crates/swc_ecma_parser/tests/test262-error-references/fail/addee2ebe09cfa9c.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/addee2ebe09cfa9c.js:1:6
  |
1 | ({a: this} = 0);
  |      ^^^^

